--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -127,20 +127,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
@@ -158,6 +144,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17261042" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/mattdesl/jsconfeu-generative-visuals">Source Code for JSConfEU WebGL Visuals</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17269559" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="http://loop-monster.bitballoon.com/">While teaching a class of kids, I made this programming game for them</a>
                                 </span>
                             </td>
                         </tr>
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528560555"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    522 points
+                                    524 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528527835"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    468 points
+                                    469 points
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=wyclif">wyclif</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528410572"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    441 points
+                                    442 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528647003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528647604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
