--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -293,13 +293,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17276362">
                                         
-                                            52 comments
+                                            54 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Cmerlyn">Cmerlyn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528602429"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    243 points
+                                    246 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lkml.org/lkml/2018/6/5/769">Torvalds: Standards need to be questioned</a>
+                                    <a href="https://www.amasad.me/github">GitHub and Open-Source Is a Boon for the Underprivileged</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17242103">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277018">
                                         
-                                            172 comments
+                                            130 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=l1k">l1k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528233068"
+                                            href="https://news.ycombinator.com/user?id=amasad">amasad</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528615562"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     223 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528650604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528651204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
