--- a/jobs/page6.html
+++ b/jobs/page6.html
@@ -127,6 +127,20 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
@@ -144,20 +158,6 @@
                                     <a href="https://news.ycombinator.com/item?id=17261042" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/mattdesl/jsconfeu-generative-visuals">Source Code for JSConfEU WebGL Visuals</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17269559" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://loop-monster.bitballoon.com/">While teaching a class of kids, I made this programming game for them</a>
                                 </span>
                             </td>
                         </tr>
@@ -466,7 +466,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528652404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528653003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
