--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lwn.net/SubscriberLink/756192/ebada7ecad32f3ad/">Advanced computing with IPython</a>
+                                    <a href="https://restoreprivacy.com/google-alternatives/">Alternatives to Google Products</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17236788">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280558">
                                         
-                                            104 comments
+                                            169 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=leephillips">leephillips</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528199656"
+                                            href="https://news.ycombinator.com/user?id=wuschel">wuschel</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528670227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     323 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528694403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528695004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
