--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://restoreprivacy.com/google-alternatives/">Alternatives to Google Products</a>
+                                    <a href="https://jochen-hoenicke.de/trezor-power-analysis/">Extracting the private key from a TREZOR with an oscilloscope (2015)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280558">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250697">
                                         
-                                            198 comments
+                                            83 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wuschel">wuschel</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528670227"
+                                            href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528316094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    395 points
+                                    397 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528698604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528699205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
