--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=mikehotel">mikehotel</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528622804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    106 points
+                                    107 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528604691"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    99 points
+                                    100 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528565088"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    97 points
+                                    98 points
                                 </span>
                             </td>
                         </tr>
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.xtof.info/blog/?p=985">The 640K memory limit of MS-DOS</a>
+                                    <a href="https://getbitbar.com/plugins/Lifestyle#.Wx1zs_ozpTE.hackernews">Lifestyle plugins for BitBar – Put anything in your Mac OS X menu bar</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274672">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17279599">
                                         
-                                            68 comments
+                                            18 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528574145"
+                                            href="https://news.ycombinator.com/user?id=olds0ul">olds0ul</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528656843"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     87 points
                                 </span>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528591265"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    86 points
+                                    87 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528704605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528705205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
