--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528570440"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    250 points
+                                    251 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=ebursztein">ebursztein</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528658019"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    248 points
+                                    249 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=BlackMonday">BlackMonday</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528674088"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    234 points
+                                    239 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528673328"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    232 points
+                                    233 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17274179">
                                         
-                                            227 comments
+                                            228 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dredmorbius">dredmorbius</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://monkeylearn.com/blog/getting-started-in-natural-language-processing-nlp/">Getting Started in Natural Language Processing</a>
+                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265593">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
                                         
-                                            37 comments
+                                            38 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wordvector">wordvector</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528467439"
+                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528662748"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     196 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528712405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528713004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
