--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
+                                    <a href="https://monkeylearn.com/blog/getting-started-in-natural-language-processing-nlp/">Getting Started in Natural Language Processing</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265593">
                                         
-                                            38 comments
+                                            37 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528662748"
+                                            href="https://news.ycombinator.com/user?id=wordvector">wordvector</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528467439"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    195 points
+                                    196 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528668679"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    160 points
+                                    162 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528712405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528713004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
