--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.independent.co.uk/voices/mi5-files-fake-news-prevent-programme-newspapers-patrick-cockburn-a8389581.html">Not All Facts Are Equal</a>
+                                    <a href="https://medium.com/@val_deleplace/go-code-refactoring-the-23x-performance-hunt-156746b522f7">Go code refactoring: the 23x performance hunt</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274304">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17283811">
                                         
-                                            54 comments
+                                            17 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=BobbyVsTheDevil">BobbyVsTheDevil</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528569038"
+                                            href="https://news.ycombinator.com/user?id=anastalaz">anastalaz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528722034"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     83 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528733405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528734005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
