--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -245,7 +245,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17274179">
                                         
-                                            236 comments
+                                            237 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dredmorbius">dredmorbius</a></strong> &nbsp;•&nbsp;
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gitea.io">Gitea – Alternative to GitLab and GitHub</a>
+                                    <a href="http://www.mymoneyblog.com/country-time-lemonade-stand-legalade.html">Country Time Lemonade Will Pay Legal Fees for Unlicensed Lemonade Stands</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245246">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17283758">
                                         
-                                            121 comments
+                                            132 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=philonoist">philonoist</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528272558"
+                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528721316"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    207 points
+                                    208 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528738204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528738805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
